Se crea la actividad de inicio y se añaden las preferencias de las paginas de anime
Se cambian los adaptadores, de tal manera de quedar todo en una clase, dando asi un mayor orden.
Se crea la vista de inicio y se crea una transicion hacia ella, mediante la eleccion de pagina de anime.
Dicha seleccion queda guardada en las preferencias implementadas.
Se crea un menu deslizante junto con sus respectivos icono y titulos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,24 @@
         <item>Ingles</item>
     </string-array>
 
+    <!--********************************************************************************************************************************************************************* -->
+    <!-- **********************************************************        drawer_list_uno        *************************************************************************** -->
+    <!--********************************************************************************************************************************************************************* -->
+    <string name="drawer_list_uno.paginas_anime.ES">Paginas de anime</string>
+    <string-array name="drawer_list_cero">
+        <item>Paginas de anime</item>
+    </string-array>
+    <string-array name="drawer_list_uno">
+        <item>Inicio</item>
+        <item>Favoritos</item>
+        <item>FAQ</item>
+        <item>Aviso Legal</item>
+    </string-array>
+    <string name="title_vistacentral_list">VistaCentrals</string>
+    <string name="title_vistacentral_detail">VistaCentral Detail</string>
+    <string name="title_activity_central">Central</string>
+    <string name="title_activity_adaptador_sitios_web">AdaptadorSitiosWeb</string>
+
 
 
     <!--********************************************************************************************************************************************************************* -->
