Se crean objetos  de la lista y se crea la seccion de animes recientes.
Se crea el fragmento que contiene la seccion de inicio de animeflv, se rellena la lista correctamente.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,9 @@
     <string name="title_activity_central">Central</string>
     <string name="title_activity_adaptador_sitios_web">AdaptadorSitiosWeb</string>
 
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 
     <!--********************************************************************************************************************************************************************* -->
