Se agrega el actionbar y se hacen los items clickeables visualmente.
Sólo se agrega el actionbar a la actividad centra. Los items de la lista de animes recientes se hacen clickeables visualmente.
Se cambia el color del menu izquierdo (drawerLayout) para corroborar que los items que ahi se encuentran tengan el efecto
provocado al realizar click sobre ellos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,9 @@
 
 
     <!--********************************************************************************************************************************************************************* -->
+    <!-- **********************************************************        menu_central        *************************************************************************** -->
+    <!--********************************************************************************************************************************************************************* -->
+    <string name="buscar.menu_central.ES">Buscar</string>
 
 
 
