Se cambia la listview de homescreen por una recyclerview. Se agrega el toolbar.
Se agrega el recyclerview y se implementa con su respectivo listener. Igualmente se implementa la toolbar con el searchview,
claro que solo se deja implementado la parte superficial.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,9 @@
     <!-- **********************************************************        menu_central        *************************************************************************** -->
     <!--********************************************************************************************************************************************************************* -->
     <string name="buscar.menu_central.ES">Buscar</string>
-
+    <string name="drawer_open.menu_central.ES">Abrir navigation drawer</string>
+    <string name="drawer_close.menu_central.ES">Cerrar navigation drawer</string>
+    <string name="search_hint.menu_central.ES">Buscar animes</string>
 
 
 </resources>
