--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,25 +21,20 @@
     </string-array>
 
     <!--********************************************************************************************************************************************************************* -->
-    <!-- **********************************************************        drawer_list_uno        *************************************************************************** -->
+    <!-- **********************************************************        drawer_list       *************************************************************************** -->
     <!--********************************************************************************************************************************************************************* -->
     <string name="drawer_list_uno.paginas_anime.ES">Paginas de anime</string>
-    <string-array name="drawer_list_cero">
-        <item>Paginas de anime</item>
-    </string-array>
-    <string-array name="drawer_list_uno">
-        <item>Inicio</item>
-        <item>Ver mas tarde</item>
-        <item>Favoritos</item>
-        <item>Descargadas</item>
-        <item>Historial</item>
-        <item>FAQ</item>
-        <item>Aviso Legal</item>
-    </string-array>
-    <string name="title_vistacentral_list">VistaCentrals</string>
-    <string name="title_vistacentral_detail">VistaCentral Detail</string>
-    <string name="title_activity_central">Central</string>
-    <string name="title_activity_adaptador_sitios_web">AdaptadorSitiosWeb</string>
+
+    <string name="inicio_drawer_layout">Inicio</string>
+    <string name="mas_tarde_drawer_layout">Ver mas tarde</string>
+    <string name="favoritos_drawer_layout">Favoritos</string>
+    <string name="descargadas_drawer_layout">Descargadas</string>
+    <string name="historial_drawer_layout">Historial</string>
+    <string name="generos_drawer_layout">Géneros</string>
+    <string name="paginas_drawer_layout">Páginas de anime</string>
+    <string name="faq_drawer_layout">FAQ</string>
+    <string name="aviso_legal_drawer_layout">Aviso Legal</string>
+
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
