Agrega snack bar, actualizan librerias, añada la funcion de eliminar en ver mas tarde.
Se agrega la funcion de swipe to dismiss and undo en el fragment de ver mas tarde, Se actualizan las bibliotecas y se reemplazan algunos metodos
que quedaron deprecados.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,18 @@
     <!--********************************************************************************************************************************************************************* -->
 
     <string name="noResultado.busquedaFLV.ES">No se han encontrado resultados.</string>
+
+    <!--********************************************************************************************************************************************************************* -->
+    <!-- **********************************************************        popupwindow homescreen        *************************************************************************** -->
+    <!--********************************************************************************************************************************************************************* -->
+
+    <string name="noti_vermastarde_si">Añadido correctamente para ver mas tarde</string>
+    <string name="noti_vermastarde_no">Este capitulo ya se encuentra en ver mas tarde</string>
+
+    <!--********************************************************************************************************************************************************************* -->
+    <!-- **********************************************************        fragment_ver_mas_tarde       *************************************************************************** -->
+    <!--********************************************************************************************************************************************************************* -->
+    <string name="noExisteAnime.verMasTarde">No existe anime para ver mas tarde</string>
+    <string name="animeBorrado.verMasTarde">Eliminado</string>
+    <string name="deshacer.verMasTarde">Deshacer</string>
 </resources>
