Se remodela la vista de Anime, en donde se encuentran los capitulos y la informacion.
Se crea una actividad aparte para asi implementar tabs y una collapsing toolbar. Se implementan los listeners y se conecta
todo lo relacionado con la seccion de favoritos y la vista principal de un anime.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,21 @@
     <!-- **********************************************************        fragment_favoritos       *************************************************************************** -->
     <!--********************************************************************************************************************************************************************* -->
     <string name="noExisten.Favoritos">No hay anime en Favoritos</string>
+    <string name="title_activity_episodios_plus_info">EpisodiosPlusInfo</string>
 
+    <!--********************************************************************************************************************************************************************* -->
+    <!-- **********************************************************        fragment_anime_info      *************************************************************************** -->
+    <!--********************************************************************************************************************************************************************* -->
+    <string name="tipo.AnimeInfo">Tipo:</string>
+    <string name="estado.AnimeInfo">Estado:</string>
+    <string name="genero.AnimeInfo">Géneros:</string>
+    <string name="fecha.AnimeInfo">Fecha de inicio:</string>
+    <string name="sinopsis.AnimeInfo">Sinopsis</string>
 
+    <!--********************************************************************************************************************************************************************* -->
+    <!-- **********************************************************        EpisodiosPlusInfo     *************************************************************************** -->
+    <!--********************************************************************************************************************************************************************* -->
+    <string name="episodios.EpisodiosPlusInfo">Episodios</string>
+    <string name="informacion.EpisodiosPlusInfo">Información</string>
 
 </resources>
